# TRTLE

./: .gitignore  README.md  pyproject.toml  requirements.txt
Examples/: 01_energy_resource_Humboldt.py  02_wind_farm_model_Humboldt.py  03a_wf_standard_spacing.py  03b_wf_honeymooring.py  04_latlong_to_UTM.py  04a_opt_wf_standard_spacing.py  04b_opt_wf_honemooring.py  05_latlong_to_UTM.py
Examples/examples_out/04_latlong_to_UTM/: Humboldt_C_SW.csv
Examples/examples_out/05_latlong_to_UTM/: Humboldt_C_NE.csv
Examples/input_files/: Humboldt_NE_sq_eq_honeymooring.yaml  Humboldt_NE_sq_eq_honeymooring_OPT.yaml  Humboldt_NE_sq_eq_standard.yaml  Humboldt_NE_sq_eq_standard_OPT.yaml
TRTLE.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
data/energy_resources/Humboldt/: 1_yr_current.xlsx  wind_resource_Humboldt_nsector=180.yaml  wind_resource_Humboldt_nsector=20.yaml
data/layout_input_files/: Humboldt_NE_sq_eq_honeymooring_OPT.yaml  Humboldt_NE_sq_eq_standard_OPT.yaml  Humboldt_NE_sq_eq_standard_OPT2.yaml  Humboldt_NE_sq_eq_standard_spacing_min_bound_dist.yaml  Humboldt_SW_standard_spacing.yaml  Humboldt_SW_standard_spacing_100tur.yaml  Humboldt_SW_standard_spacing_100tur_min_bound_dist.yaml  Humboldt_SW_standard_spacing_50tur.yaml
data/layouts/: _Humboldt_ex.csv
data/layouts/Humboldt_OptionC/: Humboldt_C_NE.csv  NE_latlong.csv  SW_latlong.csv
data/layouts/farm_boundary/: Humboldt NE.csv  Humboldt SW.csv  Humboldt_C_NE_sq_eq.csv  (+1 more)
data/trtle_input_files/: Humboldt_C_SW_honeymooring.yaml  Humboldt_C_SW_tetragonal.yaml
trtle/: farmpy.py  trtlepy.py
(+2 files in other folders)
